--- a/Hat/app/src/main/res/layout/fragment_first.xml
+++ b/Hat/app/src/main/res/layout/fragment_first.xml
@@ -10,7 +10,7 @@
         android:id="@+id/textview_first"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="NavigationHat"
+        android:text="@string/navigationhat"
         android:textColor="#FF5722"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@id/button_first"
@@ -22,9 +22,15 @@
         android:id="@+id/button_first"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Connect Device "
+        android:text="@string/connect_device"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textview_first" />
+    <Button
+        android:id="@+id/getmap"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/getmap"
+        tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
