--- a/Hat/app/src/main/res/layout/activity_map_navigation.xml
+++ b/Hat/app/src/main/res/layout/activity_map_navigation.xml
@@ -17,13 +17,13 @@
     </com.mapbox.mapboxsdk.maps.MapView>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/start_navigating"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="24dp"
-        android:enabled="false"
+        android:enabled="true"
         android:text="@string/start_navigating"
         android:textColor="@color/colorPrimaryDark"
         mapbox:layout_constraintBottom_toBottomOf="parent"
