--- a/Hat/app/src/main/res/layout/activity_map_navigation.xml
+++ b/Hat/app/src/main/res/layout/activity_map_navigation.xml
@@ -20,9 +20,21 @@
         mapbox:mapbox_cameraZoom="12">
 
 
-
     </com.mapbox.mapboxsdk.maps.MapView>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/settingsButton"
+        android:layout_width="450dp"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.93"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.58000004"
+        mapbox:srcCompat="@android:drawable/ic_menu_manage"
+        tools:ignore="MissingConstraints" />
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/searchDeviceButton"
         android:layout_width="wrap_content"
